--- a/views/auth/auth-add.html
+++ b/views/auth/auth-add.html
@@ -82,7 +82,7 @@
         <div class="layui-form-item layui-layout-admin">
             <div class="layui-input-block">
                 <div class="layui-footer">
-                    <button lay-filter="add" lay-submit class="layui-btn" id="auth_add_btn">立即提交</button>
+                    <button lay-filter="add" type="button" lay-submit class="layui-btn" id="auth_add_btn">立即提交</button>
                     <button onclick="x_admin_close()" class="layui-btn layui-btn-primary">返回</button>
                 </div>
             </div>
@@ -114,30 +114,24 @@
                         "is_active": is_active
                     },
                     success: function (data) {
-                        x_admin_close()
                         if (data.code == 200) {
                             ions_alert.alertSuccessToast(data.msg)
-                            // setTimeout(reolad_list,1000)
                         } else {
                             ions_alert.alertErrorToast(data.msg)
-                            // setTimeout(reolad_list,1000)
                         }
+                        setTimeout(function () {
+                            parent.location.reload()
+                        }, 1000)
                     },
                     error: function (data) {
                         ions_alert.alertErrorToast(data.msg)
+                        setTimeout(x_admin_close, 1000)
                     }
                 })
             });
 
         });
     })
-    function reolad_list() {
-        debugger
-        var index = parent.layer.getFrameIndex(window.name)
-        // parent.layer.close(index)
-        layer.close(layer.index)
-        window.location.href = "{{urlfor "AuthController.List"}}"
-    }
 
 </script>
 </body>
