--- a/views/auth/auth-list.html
+++ b/views/auth/auth-list.html
@@ -174,20 +174,21 @@
                     "is_active": is_active
                 },
                 success: function (data) {
-                    debugger
-                    ions_alert.alertSuccessToast(data.msg)
-                    setTimeout(reolad_list, 1000)
+                    if (data.code == 200) {
+                        ions_alert.alertSuccessToast(data.msg)
+                    } else {
+                        ions_alert.alertErrorToast(data.msg)
+                    }
+                    setTimeout(function () {
+                        window.location.reload()
+                    }, 1000)
                 },
                 error: function (data) {
                     ions_alert.alertErrorToast(data.msg)
-                    setTimeout(reolad_list, 1000)
+                    setTimeout(x_admin_close, 2000)
                 }
             })
         })
-    }
-    function reolad_list() {
-        parent.layer.close(parent.layer.getFrameIndex(window.name))
-        window.location.href = "{{urlfor "AuthController.List"}}"
     }
 </script>
 </body>
