--- a/views/auth/role-add.html
+++ b/views/auth/role-add.html
@@ -9,10 +9,10 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="/static/css/font.css">
     <link rel="stylesheet" href="/static/css/xadmin.css">
-    <link rel="stylesheet" href="/static/css/sweetalert.css">
     <script type="text/javascript" src="/static/js/ztree/jquery.min.js"></script>
     <script type="text/javascript" src="/static/lib/layui/layui.js" charset="utf-8"></script>
     <script type="text/javascript" src="/static/js/xadmin.js"></script>
+    <link rel="stylesheet" href="/static/css/sweetalert.css">
     <script type="text/javascript" src="/static/js/sweetalert.min.js"></script>
     <script type="text/javascript" src="/static/js/ions_alert.js"></script>
 
@@ -43,16 +43,16 @@
         <div class="layui-form-item">
             <label class="layui-form-label">是否启用</label>
             <div class="layui-input-block">
-                <input name="is_active" id="is_active_1" type="radio" value="1" checked="checked" title="启用"/>
-                <input name="is_active" id="is_active_0" type="radio" value="0" title="停用"/>
+                <input name="is_active" id="is_active_1" type="radio" value="0" checked="checked" title="启用"/>
+                <input name="is_active" id="is_active_0" type="radio" value="1" title="停用"/>
             </div>
         </div>
 
         <div class="layui-form-item layui-layout-admin">
             <div class="layui-input-block">
                 <div class="layui-footer">
-                    <button lay-filter="add" lay-submit class="layui-btn" id="role_add_btn">立即提交</button>
-                    <button onclick="x_admin_close()"  href="#" class="layui-btn layui-btn-primary">返回</button>
+                    <button lay-filter="add" type="button" lay-submit class="layui-btn" id="role_add_btn">立即提交</button>
+                    <button onclick="x_admin_close()" href="#" class="layui-btn layui-btn-primary">返回</button>
                 </div>
             </div>
         </div>
@@ -82,28 +82,26 @@
                     success: function (data) {
                         if (data.code == 200) {
                             ions_alert.alertSuccessToast(data.msg)
-                            setTimeout(reolad_list,1000)
-
+                            setTimeout(function () {
+                                parent.location.reload()
+                                x_admin_close()
+                            }, 2000)
                         } else {
                             ions_alert.alertErrorToast(data.msg)
-                            setTimeout(reolad_list,1000)
+                            setTimeout(function () {
+                                parent.location.reload()
+                                x_admin_close()
+                            }, 2000)
                         }
                     },
                     error: function (data) {
                         ions_alert.alertErrorToast(data.msg)
+                        setTimeout(x_admin_close, 2000)
                     }
                 })
             });
-
-
         });
     })
-    function reolad_list() {
-        debugger
-        var index = parent.layer.getFrameIndex(window.name);
-        parent.layer.close(index)
-        window.location.href = "{{urlfor "RoleController.List"}}"
-    }
 
 </script>
 </body>
