--- a/views/auth/role-user-add.html
+++ b/views/auth/role-user-add.html
@@ -90,20 +90,14 @@
                 } else {
                     ions_alert.alertErrorToast(data.msg)
                 }
-                setTimeout(reolad_list, 3000)
+                setTimeout(x_admin_close, 3000)
             },
             error: function (data) {
                 ions_alert.alertErrorToast("失败了！")
-                setTimeout(reolad_list, 3000)
+                setTimeout(x_admin_close, 3000)
             }
         })
     })
-
-    function reolad_list() {
-        debugger
-        x_admin_close()
-        window.location.href = "{{urlfor "AuthController.List"}}"
-    }
 </script>
 
 </body>
