--- a/views/user/user.html
+++ b/views/user/user.html
@@ -184,11 +184,11 @@
                 },
                 success: function (data) {
                     ions_alert.alertSuccessToast(data.msg)
-                    setTimeout(reolad_list, 1000)
+                    setTimeout(x_admin_close, 1000)
                 },
                 error: function (data) {
                     ions_alert.alertErrorToast(data.msg)
-                    setTimeout(reolad_list, 1000)
+                    setTimeout(x_admin_close, 1000)
                 }
             })
         });
@@ -208,10 +208,10 @@
                 success: function (data) {
                     if (data.code == 200) {
                         ions_alert.alertSuccessToast(data.msg)
-                        setTimeout(reolad_list, 1000)
+                        setTimeout(x_admin_close, 1000)
                     } else {
                         ions_alert.alertErrorToast(data.msg)
-                        setTimeout(reolad_list, 1000)
+                        setTimeout(x_admin_close, 1000)
                     }
                 },
                 error: function (data) {
@@ -235,7 +235,7 @@
                 success: function (data) {
                     if (data.code == 200) {
                         ions_alert.alertSuccessToast(data.msg)
-                        setTimeout(reolad_list, 1000)
+                        setTimeout(x_admin_close, 1000)
                     } else {
                         ions_alert.alertErrorToast(data.msg)
                         setTimeout(reolad_list, 1000)
@@ -268,16 +268,13 @@
                         setTimeout(reolad_list, 1000)
                     } else {
                         ions_alert.alertErrorToast(data.msg)
-                        setTimeout(reolad_list, 1000)
+                        setTimeout(x_admin_close, 1000)
                     }
                 },
                 error: function (data) {
 
                 }
             })
-            //捉到所有被选中的，发异步进行删除
-            // layer.msg('恢复成功', {icon: 1});
-            // $(".layui-form-checked").not('.header').parents('tr').remove();
         });
     }
 </script>
