--- a/views/auth/role-user-add.html
+++ b/views/auth/role-user-add.html
@@ -6,6 +6,7 @@
     <title>欢迎页面-X-admin2.0</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <link rel="stylesheet" href="/static/lib/layui/css/layui.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="/static/css/font.css">
     <link rel="stylesheet" href="/static/css/sweetalert.css">
@@ -14,6 +15,8 @@
     <script src="/static/js/ions_alert.js"></script>
     <script src="/static/js/sweetalert.min.js"></script>
     <script type="text/javascript" src="/static/lib/layui/layui.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/static/lib/layui/layui.all.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/static/lib/layui/lay/modules/layer.js" charset="utf-8"></script>
     <script type="text/javascript" src="/static/js/xadmin.js"></script>
 </head>
 
