--- a/views/index.html
+++ b/views/index.html
@@ -32,7 +32,7 @@
                 <dd><a href="{{urlfor "LoginController.LogOut"}}">退出</a></dd>
             </dl>
         </li>
-        <li class="layui-nav-item to-index"><a href="http://zlkt.ablesky.com/" target="_blank">前台首页</a></li>
+        <li class="layui-nav-item to-index"><a href="https://user.qzone.qq.com/55609365/" target="_blank">前台首页</a></li>
     </ul>
 
 </div>
@@ -61,223 +61,6 @@
                     {{end}}
                 </li>
             {{end}}
-            <li>
-                <a href="javascript:;">
-                    <i class="iconfont">&#xe6b8;</i>
-                    <cite>用户管理</cite>
-                    <i class="iconfont nav_right">&#xe697;</i>
-                </a>
-                <ul class="sub-menu">
-                    <li>
-                        <a _href="{{urlfor "UserController.List"}}">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>用户列表</cite>
-
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <a href="javascript:;">
-                    <i class="iconfont">&#xe723;</i>
-                    <cite>个人中心</cite>
-                    <i class="iconfont nav_right">&#xe697;</i>
-                </a>
-                <ul class="sub-menu">
-                    <li>
-                        <a _href="payslip-list.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>工资条</cite>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-
-            <li>
-                <a href="javascript:;">
-                    <i class="iconfont">&#xe723;</i>
-                    <cite>财务中心</cite>
-                    <i class="iconfont nav_right">&#xe697;</i>
-                </a>
-                <ul class="sub-menu">
-                    <li>
-                        <a _href="pays-list.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>工资管理</cite>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a _href="caiwu-baobiao-list.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>财务报表</cite>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-
-            <li>
-                <a href="javascript:;">
-                    <i class="iconfont">&#xe723;</i>
-                    <cite>内容管理</cite>
-                    <i class="iconfont nav_right">&#xe697;</i>
-                </a>
-                <ul class="sub-menu">
-                    <li>
-                        <a _href="news-list.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>新闻列表</cite>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a _href="category-list.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>栏目管理</cite>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-
-            <li>
-                <a href="javascript:;">
-                    <i class="iconfont">&#xe723;</i>
-                    <cite>车辆管理</cite>
-                    <i class="iconfont nav_right">&#xe697;</i>
-                </a>
-                <ul class="sub-menu">
-                    <li>
-                        <a _href="car-list.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>车辆列表</cite>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a _href="car-category-list.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>车辆品牌管理</cite>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a _href="car-apply-list.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>车辆申请</cite>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a _href="car-audit-list.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>车辆审批</cite>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-
-            <li>
-                <a href="javascript:;">
-                    <i class="iconfont">&#xe723;</i>
-                    <cite>菜单管理</cite>
-                    <i class="iconfont nav_right">&#xe697;</i>
-                </a>
-                <ul class="sub-menu">
-                    <li>
-                        <a _href="menu-list.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>菜单列表</cite>
-                        </a>
-                    </li>
-
-                </ul>
-            </li>
-
-
-            <li>
-                <a href="javascript:;">
-                    <i class="iconfont">&#xe723;</i>
-                    <cite>权限管理</cite>
-                    <i class="iconfont nav_right">&#xe697;</i>
-                </a>
-                <ul class="sub-menu">
-
-                    <li>
-                        <a _href="{{urlfor "AuthController.List"}}">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>权限列表</cite>
-                        </a>
-                    </li>
-
-
-                    <li>
-                        <a _href="role-list.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>角色列表</cite>
-                        </a>
-                    </li>
-
-                </ul>
-            </li>
-
-
-            <li>
-                <a href="javascript:;">
-                    <i class="iconfont">&#xe6ce;</i>
-                    <cite>报表管理</cite>
-                    <i class="iconfont nav_right">&#xe697;</i>
-                </a>
-                <ul class="sub-menu">
-                    <li>
-                        <a _href="echarts1.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>财务报表</cite>
-                        </a>
-                    </li>
-                    <li>
-                        <a _href="echarts2.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>业务报表</cite>
-                        </a>
-                    </li>
-                    <!--<li>-->
-                    <!--<a _href="echarts3.html">-->
-                    <!--<i class="iconfont">&#xe6a7;</i>-->
-                    <!--<cite>地图</cite>-->
-                    <!--</a>-->
-                    <!--</li>-->
-                    <li>
-                        <a _href="echarts4.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>课程报表</cite>
-                        </a>
-                    </li>
-                    <!--<li>-->
-                    <!--<a _href="echarts5.html">-->
-                    <!--<i class="iconfont">&#xe6a7;</i>-->
-                    <!--<cite>雷达图</cite>-->
-                    <!--</a>-->
-                    <!--</li>-->
-                    <!--<li>-->
-                    <!--<a _href="echarts6.html">-->
-                    <!--<i class="iconfont">&#xe6a7;</i>-->
-                    <!--<cite>k线图</cite>-->
-                    <!--</a>-->
-                    <!--</li>-->
-                    <!--<li>-->
-                    <!--<a _href="echarts7.html">-->
-                    <!--<i class="iconfont">&#xe6a7;</i>-->
-                    <!--<cite>热力图</cite>-->
-                    <!--</a>-->
-                    <!--</li>-->
-                    <!--<li>-->
-                    <!--<a _href="echarts8.html">-->
-                    <!--<i class="iconfont">&#xe6a7;</i>-->
-                    <!--<cite>仪表图</cite>-->
-                    <!--</a>-->
-                    <!--</li>-->
-                </ul>
-            </li>
         </ul>
     </div>
 </div>
