--- a/views/car/car-audit-add.html
+++ b/views/car/car-audit-add.html
@@ -8,11 +8,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
       <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-      <link rel="stylesheet" href="../static/css/font.css">
-      <link rel="stylesheet" href="../static/css/xadmin.css">
+      <link rel="stylesheet" href="../../static/css/font.css">
+      <link rel="stylesheet" href="../../static/css/xadmin.css">
       <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
-      <script type="text/javascript" src="../static/lib/layui/layui.js" charset="utf-8"></script>
-      <script type="text/javascript" src="../static/js/xadmin.js"></script>
+      <script type="text/javascript" src="../../static/lib/layui/layui.js" charset="utf-8"></script>
+      <script type="text/javascript" src="../../static/js/xadmin.js"></script>
       <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
       <!--[if lt IE 9]>
       <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
@@ -40,8 +40,7 @@
                   <span class="x-red">*</span>申请理由
               </label>
               <div class="layui-input-inline">
-                  <input type="text" id="L_username" name="username" required="" lay-verify="nikename"
-                  autocomplete="off" class="layui-input">
+                  <input type="text" autocomplete="off" class="layui-input" value="见客户，得有面子">
               </div>
           </div>
           <div class="layui-form-item">
@@ -49,8 +48,7 @@
                   <span class="x-red">*</span>目的地
               </label>
               <div class="layui-input-inline">
-                  <input type="text" id="L_pass" name="pass" required="" lay-verify="pass"
-                  autocomplete="off" class="layui-input">
+                  <input type="text" class="layui-input" value="北京">
               </div>
               <!--<div class="layui-form-mid layui-word-aux">-->
                   <!--6到16个字符-->
@@ -61,9 +59,28 @@
                   <span class="x-red">*</span>归还日期
               </label>
               <div class="layui-input-inline">
-                  <input class="layui-input" placeholder="开始日" name="start" id="start">
+                  <input class="layui-input" value="2019年10月12日">
               </div>
           </div>
+
+            <div class="layui-form-item">
+                <label class="layui-form-label">是否同意</label>
+                <div class="layui-input-inline">
+                    <input name="is_audit" type="radio" value="1" checked="checked" title="同意"/>
+                    <input name="is_audit" type="radio" value="0" title="不同意"/>
+                </div>
+            </div>
+
+            <div class="layui-form-item">
+                <label class="layui-form-label">
+                    <span class="x-red">*</span>审核意见
+                </label>
+                <div class="layui-input-inline">
+                    <textarea class="layui-input" style="width: 300px;height: 100px" name="" id="" cols="30" rows="10" placeholder="请输入审核意见"></textarea>
+                    <!--<textarea class="layui-input" placeholder="请输入审核意见">-->
+                </div>
+            </div>
+
             <div class="layui-form-item layui-layout-admin">
                 <div class="layui-input-block">
                     <div class="layui-footer" >
