--- a/views/car/car-audit-list.html
+++ b/views/car/car-audit-list.html
@@ -8,11 +8,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="../static/css/font.css">
-    <link rel="stylesheet" href="../static/css/xadmin.css">
+    <link rel="stylesheet" href="../../static/css/font.css">
+    <link rel="stylesheet" href="../../static/css/xadmin.css">
     <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="../static/lib/layui/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../static/js/xadmin.js"></script>
+    <script type="text/javascript" src="../../static/lib/layui/layui.js" charset="utf-8"></script>
+    <script type="text/javascript" src="../../static/js/xadmin.js"></script>
     <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
     <!--[if lt IE 9]>
       <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
@@ -24,23 +24,25 @@
     <div class="x-nav">
       <span class="layui-breadcrumb">
         <a href="">首页</a>
-        <a href="">个人中心</a>
+        <a href="">车辆管理</a>
         <a>
-          <cite>工资条</cite></a>
+          <cite>车辆审批</cite></a>
       </span>
       <a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right" href="javascript:location.replace(location.href);" title="刷新">
         <i class="layui-icon" style="line-height:30px">ဂ</i></a>
     </div>
     <div class="x-body">
-      <div class="layui-row">
-        <form class="layui-form layui-col-md12 x-so">
-          <input class="layui-input" placeholder="请选择月份" name="start" id="start">
-          <button class="layui-btn"  lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
-        </form>
-      </div>
+      <!--<div class="layui-row">-->
+        <!--<form class="layui-form layui-col-md12 x-so">-->
+          <!--<input class="layui-input" placeholder="开始日" name="start" id="start">-->
+          <!--<input class="layui-input" placeholder="截止日" name="end" id="end">-->
+          <!--<input type="text" name="username"  placeholder="请输入用户名" autocomplete="off" class="layui-input">-->
+          <!--<button class="layui-btn"  lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>-->
+        <!--</form>-->
+      <!--</div>-->
       <xblock>
-        <button class="layui-btn" onclick="x_admin_show('导入','./member-add.html',600,400)"><i class="layui-icon"></i>导入</button>
-
+        <!--<button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>-->
+        <!--<button class="layui-btn" onclick="x_admin_show('添加用户','./member-add.html',600,400)"><i class="layui-icon"></i>添加</button>-->
         <span class="x-right" style="line-height:40px">共有数据：88 条</span>
       </xblock>
       <table class="layui-table">
@@ -50,12 +52,12 @@
               <div class="layui-unselect header layui-form-checkbox" lay-skin="primary"><i class="layui-icon">&#xe605;</i></div>
             </th>
             <th>ID</th>
-            <th>收入</th>
-            <th>成本</th>
-            <th>支出</th>
-            <th>月份</th>
-            <!--<th>操作</th>-->
-          </tr>
+            <th>车辆名称</th>
+            <th>申请人</th>
+            <th>申请事由</th>
+            <th>申请时间</th>
+            <th>状态</th>
+            <th>操作</th></tr>
         </thead>
         <tbody>
           <tr>
@@ -63,37 +65,16 @@
               <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='2'><i class="layui-icon">&#xe605;</i></div>
             </td>
             <td>1</td>
-            <td>20万</td>
-            <td>3万</td>
-            <td>12万</td>
-            <td>2019-01-01</td>
+            <td>宝马</td>
+            <td>小明</td>
+            <td>见客户，得有面子</td>
+            <td>2017-01-01 11:11:42</td>
+            <td class="td-status">
+              <span class="layui-btn layui-btn-normal layui-btn-mini">已启用</span></td>
+            <td class="td-manage">
+              <button class="layui-btn" onclick="x_admin_show('审核','./car-audit-add.html')"><i class="layui-icon">&#xe63c;</i>审核</button>
 
-            <!--<td class="td-manage">-->
-              <!--<button class="layui-btn" onclick="x_admin_show('查看详情','./car-apply-add.html')"><i class="layui-icon">&#xe63c;</i>查看详情</button>-->
-
-              <!--&lt;!&ndash;<a title="查看详情"  onclick="x_admin_show('查看详情','member-edit.html',600,400)" href="javascript:;">&ndash;&gt;-->
-                <!--&lt;!&ndash;<i class="layui-icon">&#xe642;</i>&ndash;&gt;-->
-              <!--&lt;!&ndash;</a>&ndash;&gt;-->
-            <!--</td>-->
-          </tr>
-
-          <tr>
-            <td>
-              <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='2'><i class="layui-icon">&#xe605;</i></div>
             </td>
-            <td>1</td>
-            <td>200万</td>
-            <td>20万</td>
-            <td>50万</td>
-            <td>2019-02-01</td>
-
-            <!--<td class="td-manage">-->
-              <!--<button class="layui-btn" onclick="x_admin_show('查看详情','./car-apply-add.html')"><i class="layui-icon">&#xe63c;</i>查看详情</button>-->
-
-              <!--&lt;!&ndash;<a title="查看详情"  onclick="x_admin_show('查看详情','member-edit.html',600,400)" href="javascript:;">&ndash;&gt;-->
-              <!--&lt;!&ndash;<i class="layui-icon">&#xe642;</i>&ndash;&gt;-->
-              <!--&lt;!&ndash;</a>&ndash;&gt;-->
-            <!--</td>-->
           </tr>
 
         </tbody>
