--- a/views/user/user.html
+++ b/views/user/user.html
@@ -184,11 +184,17 @@
                 },
                 success: function (data) {
                     ions_alert.alertSuccessToast(data.msg)
-                    setTimeout(x_admin_close, 1000)
+                    setTimeout(function () {
+                        x_admin_close()
+                        window.location.reload()
+                    }, 1000)
                 },
                 error: function (data) {
                     ions_alert.alertErrorToast(data.msg)
-                    setTimeout(x_admin_close, 1000)
+                    setTimeout(function () {
+                        x_admin_close()
+                        window.location.reload()
+                    }, 1000)
                 }
             })
         });
@@ -208,10 +214,16 @@
                 success: function (data) {
                     if (data.code == 200) {
                         ions_alert.alertSuccessToast(data.msg)
-                        setTimeout(x_admin_close, 1000)
+                        setTimeout(function () {
+                            x_admin_close()
+                            window.location.reload()
+                        }, 1000)
                     } else {
                         ions_alert.alertErrorToast(data.msg)
-                        setTimeout(x_admin_close, 1000)
+                        setTimeout(function () {
+                            x_admin_close()
+                            window.location.reload()
+                        }, 1000)
                     }
                 },
                 error: function (data) {
