--- a/views/welcome.html
+++ b/views/welcome.html
@@ -124,7 +124,7 @@
 <script type="text/javascript">
     $(function () {
         getSysInfo()
-        setInterval(getSysInfo,5000)
+        setInterval(getSysInfo,1000*60)
     })
 
     function getSysInfo() {
