bgm添加,车辆列表逻辑完善

--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="/static/js/ztree/jquery.min.js"></script>
     <script src="/static/lib/layui/layui.js" charset="utf-8"></script>
     <script type="text/javascript" src="/static/js/xadmin.js"></script>
-
+    <audio hidden autoplay src="/static/music/2727105880.mp3" controls="controls"></audio>
 </head>
 <body>
 <!-- 顶部开始 -->
